# hass-unfoldedcircle

./: README.md  hacs.json  pyproject.toml
.github/workflows/: pythonpackage.yaml
custom_components/unfoldedcircle/: __init__.py  config_flow.py  const.py  device.py  manifest.json  remote.py  strings.json
custom_components/unfoldedcircle/translations/: en.json
tests/: test_remote.py
